--- a/style.css
+++ b/style.css
@@ -1,44 +1,5 @@
-/* button {
-    padding: 10px;
-    margin: 10px;
-}
-
-#timer {
-    margin-top: 20px;
-} */
-
-
-body {
-    margin: 0;
-    overflow: hidden;
-}
-
 .background-container {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-
-.background-image {
-    width: 100%;
-    height: 100%;
-    background: url('https://nse.digital/pages/resources/lab-imgs/lab4.jpg') center center/cover;
-    position: absolute;
-    transition: transform 0.1s ease-out;
-}
-
-.container {
-    position: relative;
-    z-index: 1;
-}
-
-.card {
-    background: rgba(255, 255, 255, 0.8);
-}
-
-.btn {
-    cursor: pointer;
+    background-image: url('assets/lab_bg.jpg');
+    
 }
