--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body {
     margin: 0;
     padding: 0;
     background-color: #000 !important; 
-    overflow: hidden; }
+    overflow: hidden;
+    box-sizing: border-box;
+}
 
 .background-image {
     position: fixed;
@@ -13,4 +15,72 @@ body {
     background: url('assets/lab_bg.jpg') no-repeat center center fixed;
     background-size: cover;
     opacity: 0.3;
+    pointer-events: none; 
+}
+
+.mouse_move {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mouse_move img {
+    position: absolute;
+    height: 100px;
+    width: 100px;
+}
+
+
+#img1 {
+    top: 90%;
+    left: 90%;
+}
+
+#img2 {
+    top: 20%;
+    left: 20%;
+}
+
+#img3 {
+    top: 30%;
+    left: 30%;
+}
+
+#img4 {
+    top: 40%;
+    left: 40%;
+}
+
+#img5 {
+    top: 50%;
+    left: 50%;
+}
+
+#img6 {
+    top: 60%;
+    left: 60%;
+}
+
+#img7 {
+    top: 70%;
+    left: 70%;
+}
+
+#img8 {
+    top: 80%;
+    left: 80%;
+}
+
+#img9 {
+    top: 90%;
+    left: 90%;
+}
+
+#img10 {
+    top: 90%;
+    right: 90%;
 }
