--- a/style.css
+++ b/style.css
@@ -30,57 +30,62 @@ body {
 
 .mouse_move img {
     position: absolute;
-    height: 100px;
-    width: 100px;
+    height: 80px;
+    width: 80px;
 }
 
 
 #img1 {
-    top: 90%;
-    left: 90%;
+    top: 5%;
+    left: 5%;
 }
 
 #img2 {
     top: 20%;
-    left: 20%;
-}
-
-#img3 {
-    top: 30%;
-    left: 30%;
-}
-
-#img4 {
-    top: 40%;
     left: 40%;
 }
 
-#img5 {
-    top: 50%;
+#img3 {
+    top: 5%;
     left: 50%;
 }
 
+#img4 {
+    top: 70%;
+    left: 80%;
+}
+
+#img5 {
+    top: 20%;
+    right: 2%;
+}
+
 #img6 {
-    top: 60%;
-    left: 60%;
+    top: 25%;
+    left: 30%;
 }
 
 #img7 {
-    top: 70%;
-    left: 70%;
+    top: 50%;
+    left: 55%;
 }
 
 #img8 {
     top: 80%;
-    left: 80%;
+    left: 40%;
 }
 
 #img9 {
-    top: 90%;
-    left: 90%;
+    bottom: 10%;
+    left: 1%;
 }
 
 #img10 {
-    top: 90%;
-    right: 90%;
+    bottom: 5%;
+    right: 30%;
 }
+
+/* image shadow -- leads to box shadow */
+/* #img1, #img2, #img3, #img4, #img5, #img6, #img7, #img8, #img9, #img10 {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Adjust the values as needed */
+} */
