--- a/style.css
+++ b/style.css
@@ -18,24 +18,41 @@ body {
     pointer-events: none; 
 }
 
-.card1:hover {
-    box-shadow: 0 0 50px rgba(0, 211, 211, 0.7); 
-    transition: box-shadow 0.4s ease-in-out; 
-}
-.card2:hover {
-    box-shadow: 0 0 50px rgba(211, 179, 0, 0.7); 
-    transition: box-shadow 0.4s ease-in-out; 
-}
-.card3:hover {
-    box-shadow: 0 0 50px rgba(211, 0, 0, 0.7); 
-    transition: box-shadow 0.4s ease-in-out; 
-}
-
 .card1,
 .card2,
 .card3 {
     background-color: rgba(255, 255, 255, 0.25);
+    border-radius: 15px; 
 }
+
+.card1 {
+    transition: box-shadow 0.4s ease-in-out; 
+}
+
+.card1:hover {
+    box-shadow: 0 0 40px rgb(0, 255, 255); 
+    transition: box-shadow 0.4s ease-in-out;
+    border: 2px solid rgba(0, 211, 211, 0.7); 
+}
+
+.card2 {
+    transition: box-shadow 0.4s ease-in-out; 
+}
+
+.card2:hover {
+    box-shadow: 0 0 40px rgb(255, 217, 0); 
+    transition: box-shadow 0.4s ease-in-out; 
+}
+
+.card3 {
+    transition: box-shadow 0.4s ease-in-out;
+}
+
+.card3:hover {
+    box-shadow: 0 0 40px rgb(211, 0, 0); 
+    transition: box-shadow 0.4s ease-in-out; 
+}
+
 .mouse_move {
     position: relative;
     width: 100%;
