--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ body {
     pointer-events: none; 
 }
 
+.card-body,
+.card-footer {
+    border-top: 1px solid rgba(255, 255, 255, 0.2); /* Add a light border to separate sections */
+    padding: 15px; /* Add padding for better spacing */
+}
 
 .card1 .card-img-top {
     width: 100%;
@@ -37,9 +42,15 @@ body {
 .card1,
 .card2,
 .card3 {
-    background-color: rgba(160, 160, 160, 0.4);
+    /* background-color: rgba(160, 160, 160, 0.4);
     border-radius: 15px; 
-    border: 0.5px solid rgba(0, 0, 0, 0.5);
+    border: 0.5px solid rgba(0, 0, 0, 0.5); */
+    background: rgba(255, 255, 255, 0.1); 
+    border: 1px solid rgba(255, 255, 255, 0.2); 
+    border-radius: 15px; 
+    backdrop-filter: blur(10px);
+    transition: background 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .card1:hover .card-header b {
@@ -62,6 +73,14 @@ body {
     /* transition: color 0.3s ease-in-out; */
 }
 
+.card1:hover,
+.card2:hover,
+.card3:hover {
+    background: rgba(255, 255, 255, 0.2); 
+    box-shadow: 0 0 40px rgba(21, 255, 0);
+    transition: box-shadow 0.2s ease-in-out;
+    border: 0.3px solid rgba(21, 255, 0);
+}
 
 .card1 {
     transition: box-shadow 0.4s ease-in-out; 
